--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@dimforge/rapier3d-compat": "^0.19.3",
+    "socket.io-client": "^4.8.3",
     "three": "^0.182.0"
   },
   "devDependencies": {
@@ -22,4 +23,3 @@
     "vite": "^7.3.1"
   }
 }
-
